--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>SynomData</title>
+  <link rel="icon" href="assets/icon.png" sizes="16x16" type="image/png">
+  <link rel="icon" href="assets/icon.png" sizes="32x32" type="image/png">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+  <header class="navbar">
+    <div class="logo">SynomData</div>
+    <nav class="nav-links">
+      <a href="#">Home</a>  
+      <a href="#">Solutions</a>
+      <a href="#">Why Us</a>
+      <a href="#">About Us</a>
+      <a href="#">Our Services</a>
+      <a href="#">Industries</a>
+    </nav>
+    <div class="consultation-button">
+      Get Consultation <span class="phone-icon">📞</span>
+    </div>
+  </header>
+  <script src="script.js"></script>
 </body>
 </html>
