--- a/index.html
+++ b/index.html
@@ -102,6 +102,45 @@
     </nav>
   </div>
   
+  <section class="hero-section">
+    <div class="hero-content">
+        <h2>Empowering Businesses with<br><span>D</span><span>a</span><span>t</span><span>a</span><span>-</span><span>D</span><span>r</span><span>i</span><span>v</span><span>e</span><span>n</span> <span>S</span><span>o</span><span>l</span><span>u</span><span>t</span><span>i</span><span>o</span><span>n</span><span>s</span></h2>
+        <div class="spinner-circle">
+          <div class="paragraph-button">
+          <p>We help you streamline decisions, reduce costs,<br> and take the bold step forward.</p>
+        <button class="cssbuttons-io-button">
+          Get started
+          <div class="icon">
+            <svg
+              height="24"
+              width="24"
+              viewBox="0 0 24 24"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path d="M0 0h24v24H0z" fill="none"></path>
+              <path
+                d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"
+                fill="currentColor"
+              ></path>
+            </svg>
+          </div>
+        </button>
+      </div>
+      <div class="spinner-container">
+        <div class="path-background"></div>
+        <img src="assets/spinner.svg" alt="spinner" class="rotate-image">
+        <div class="spinner">
+          <div class="spinnerin"></div>
+      </div>
+    </div>
+        </div>
+        
+    </div>
+    <div class="hero-image">
+        <img src="assets/hero-image.png" alt="City Skyline">
+    </div>
+</section>
+
   <script src="script.js"></script>
 </body>
 </html>
