--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         
     </div>
     <div class="hero-image">
-        <img src="assets/hero-image.png" alt="City Skyline">
+        <img src="assets/hero-image.png" alt="City Skyline" class="responsive-image">
     </div>
 </section>
 
