--- a/index.html
+++ b/index.html
@@ -104,12 +104,12 @@
   
   <section class="hero-section">
     <div class="hero-content">
-        <h2>Empowering Businesses with<br><span>D</span><span>a</span><span>t</span><span>a</span><span>-</span><span>D</span><span>r</span><span>i</span><span>v</span><span>e</span><span>n</span> <span>S</span><span>o</span><span>l</span><span>u</span><span>t</span><span>i</span><span>o</span><span>n</span><span>s</span>
+        <h2 class="hero-title">Empowering Businesses with<br><span>D</span><span>a</span><span>t</span><span>a</span><span>-</span><span>D</span><span>r</span><span>i</span><span>v</span><span>e</span><span>n</span> <span>S</span><span>o</span><span>l</span><span>u</span><span>t</span><span>i</span><span>o</span><span>n</span><span>s</span>
           <div class="path-background"></div>
         </h2>
         <div class="spinner-circle">
           <div class="paragraph-button">
-          <p>We help you streamline decisions, reduce costs,<br> and take the bold step forward.</p>
+          <p class="sub-title">We help you streamline decisions, reduce costs,<br> and take the bold step forward.</p>
         <button class="cssbuttons-io-button">
           Get started
           <div class="icon">
